--- a/src/main/resources/templates/notification-email.html
+++ b/src/main/resources/templates/notification-email.html
@@ -38,7 +38,7 @@
 <body>
 <div class="container">
     <div class="header">
-<!--        <img src="đường-dẫn-đến-logo.png" alt="Logo" class="header-logo">-->
+        <img src="đường-dẫn-đến-logo.png" alt="Logo" class="header-logo">
         <h2>Thông báo mới từ SEM</h2>
     </div>
     <div class="content">
